# IMC

./: .gitmodules  IMC.cpp  Makefile  Makefile-Refactoring  Makefile-Test  Persona.cpp  Persona.h  README.md  intruccionesCorrrerElPrograma.html  main.cpp  programa
IMC-tests/: APIClient.cpp  APIClient.h  CMakeLists.txt  IMC.h  Persona.cpp  Persona.h  main.cpp
IMC-tests/test/: test_IMC.cpp
Refactoring/: IMC.cpp  IMC.h  Persona.cpp
Tests/: APIClient.cpp  APIClient.h  Persona.cpp  Persona.h  main.cpp
